--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-# README
+= README
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
@@ -23,28 +23,31 @@ Things you may want to cover:
 
 * ...
 
-## TODO
+== TODO
 
-* Domain: Post (New Post, Show Post, List Posts, Update Post, Delete Post)
-* Domain: Comment
-* Post Paging
-* Domain: Author
+* [ ] Domain: Author
 (https://github.com/plataformatec/devise#getting-started)
 (https://guides.railsgirls.com/devise)
 (https://ihower.tw/rails/auth.html#sec0)
-* Registration (https://www.railstutorial.org/book/sign_up)
-* Authentication (https://www.railstutorial.org/book/basic_login)
-* Facebook login
+* [ ] Registration (https://www.railstutorial.org/book/sign_up)
+* [ ] Authentication (https://www.railstutorial.org/book/basic_login)
+* [ ] Facebook login
 (https://github.com/plataformatec/devise/wiki/OmniAuth:-Overview)
 (https://revs.runtime-revolution.com/working-with-facebook-using-devise-omniauth-koala-and-rails-5-cde5d032de02)
 (http://lichen-blog.logdown.com/posts/2542955)
-* Unit test & Integration test
-* Heroku & Postgres (https://www.railstutorial.org/book/beginning#sec-heroku_setup)
-* Dockerize & GCP (Container Engine or Compute Engine)
-* Ajax call instead of form submit
-* Theme & Font
+* [ ] Domain: Post (New Post, Show Post, List Posts, Update Post, Delete Post)
+(http://guides.rubyonrails.org/getting_started.html)
+* [ ] Domain: Comment
+(http://guides.rubyonrails.org/getting_started.html)
+* [ ] Post Paging
+* [ ] Unit test & Integration test
+* [ ] Heroku & Postgres (https://www.railstutorial.org/book/beginning#sec-heroku_setup)
+* [ ] Dockerize & GCP (Container Engine or Compute Engine)
+* [ ] Ajax call instead of form submit
+* [ ] Theme & Font
 
-## Reference
+== Reference
+
 * http://guides.rubyonrails.org/getting_started.html
 * https://www.railstutorial.org/book
 * http://guides.rubyonrails.org/working_with_javascript_in_rails.html
@@ -53,7 +56,7 @@ Things you may want to cover:
 * http://guides.rubyonrails.org/association_basics.html
 * http://guides.rubyonrails.org/security.html
 
-## Memo
+== Memo
 
 * Practicing DDD or maybe TDD
 * Built-in DB migration and init
